Update wiremock tests
Signed-off-by: Taylor Smock <tsmock@meta.com>